Fixing gradient colors broken in previous commit

--- a/Portal/Content/Site.css
+++ b/Portal/Content/Site.css
@@ -212,11 +212,11 @@ ul#menu {
 
     .featured .content-wrapper {
         background-color: #000000;
-        background-image: -ms-linear-gradient(left, #000000 0%, #a4d4e6 100%);
-        background-image: -o-linear-gradient(left, #000000 0%, #a4d4e6 100%);
-        background-image: -webkit-gradient(linear, left top, right top, color-stop(0, #000000), color-stop(1, #a4d4e6));
-        background-image: -webkit-linear-gradient(left, #000000 0%, #a4d4e6 100%);
-        background-image: linear-gradient(left, #000000 0%, #a4d4e6 100%);
+        background-image: -ms-linear-gradient(left, #000000 0%, #000000 100%);
+        background-image: -o-linear-gradient(left, #000000 0%, #000000 100%);
+        background-image: -webkit-gradient(linear, left top, right top, color-stop(0, #000000), color-stop(1, #000000));
+        background-image: -webkit-linear-gradient(left, #000000 0%, #000000 100%);
+        background-image: linear-gradient(left, #000000 0%, #000000 100%);
         color: #3e5667;
         padding: 20px 40px 30px 40px;
     }
